--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,7 +5,9 @@
     "pages/turntable/turntable",
     "pages/index/index",
     "pages/story/story_detail/story_detail",
-    "pages/punishment/punishment"
+    "pages/punishment/punishment",
+    "pages/punishment/lady/lady",
+    "pages/punishment/man/man"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
